# OpenISS

./: .classpath  .gitattributes  .gitignore  .gitmodules  .project  .travis.yml  Makefile  ProjectReport  Project_Report.txt  README.md  README_CSI230-101_2017  SECURITY.md  pom.xml
.github/: dependabot.yml  labeler.yml
.github/workflows/: codeql-analysis.yml  label.yml
doc/: CONTRIBUTORS.md  CSI230F18.md  Project_Report.txt
doc/CSI230F18_Docs/: NetHackHCI.txt  OFX_Quickstart.md  errors.md
docs/: README_CSI230-101_2017
lib/v1/linux/: libfakenect.so.0.6.2  (+1 more)
oglBuild/: CMakeCache.txt  Makefile  cmake_install.cmake  launch-tutorial03_matrices.sh  launch-tutorial04_colored_cube.sh  launch-tutorial05_textured_cube.sh  launch-tutorial06_keyboard_and_mouse.sh  launch-tutorial09_AssImp.sh  launch-tutorial09_several_objects.sh  launch-tutorial09_vbo_indexing.sh  launch-tutorial10_transparency.sh  launch-tutorial11_2d_fonts.sh  launch-tutorial16_shadowmaps_simple.sh  launch-tutorial17_rotations.sh  launch-tutorial18_billboards.sh  misc05_picking_BulletPhysics  misc05_picking_custom  misc05_picking_slow_easy  playground  tutorial01_first_window  tutorial02_red_triangle  tutorial03_matrices  tutorial04_colored_cube  tutorial05_textured_cube  tutorial06_keyboard_and_mouse  tutorial07_model_loading  tutorial08_basic_shading  tutorial09_several_objects  tutorial09_vbo_indexing  tutorial10_transparency  tutorial11_2d_fonts  tutorial12_extensions  tutorial13_normal_mapping  tutorial14_render_to_texture  tutorial15_lightmaps  tutorial16_shadowmaps  tutorial16_shadowmaps_simple  tutorial17_rotations  tutorial18_billboards  tutorial18_particles
src/: Makefile
src/api/: Makefile
src/api/cpp/core/: CMakeLists.txt  OIAligner.cpp  OIDataFrame.cpp  OIDevFactory.cpp  OIFace.cpp  OIKinect.cpp  OISkeleton.c  OISkeleton.cpp  OISkeletonWrapper.cpp  OITrackerFactory.cpp  OIUser.cpp
src/scripts/: build.sh
tools/: README.md  updatebranchestags.sh
tools/ci/: docker_run_tests.sh  docker_setup_tests.sh
web/WEB-INF/: web.xml
(+2118 files in other folders)
